--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <title>Europe Trip 2025</title>
+  <title>2025 歐洲旅行行程</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <h1>Europe Trip 2025</h1>
-    <p>Dec 13 – Dec 27 · Milan · Venice · Florence · Rome · Paris · London</p>
+    <h1>2025 歐洲旅行行程</h1>
+    <p>2025/12/13 – 2025/12/27 · 米蘭 · 湖區 · 威尼斯 · 佛羅倫斯 · 羅馬 · 巴黎 · 倫敦</p>
   </header>
 
   <main>
@@ -18,7 +18,7 @@
   </main>
 
   <footer>
-    <p>Typical climate info only – check a weather app 3–5 days before travel.</p>
+    <p>天氣為平均氣候參考，請出發前 3–5 天再用天氣 App 查實際預報。</p>
   </footer>
 
   <script src="app.js"></script>
